选中版本持久化、页面状态保持、崩溃检测与诊断优化
- 选中游戏版本提升到全局持久化（GameVersionStore），跨页面/重启保持，
  模组/光影兼容匹配跟随主页选中版本；资源页新增「目标版本」手动切换按钮
- 下载/资源页 subtab 状态跨 tab 切换保持，不再重置回「版本」
- 修复 classpath 重复 ASM 导致 Fabric 拒绝启动（保留最高版本去重）
- 新增 MioExitAgent：区分干净/异常退出清理崩溃标记（SecurityManager 捕获退出码）
- 修复 hs_err 文件名匹配（hs_err_<pid>.log），JVM 崩溃可被检测
- 崩溃诊断优化：模组类根因优先、过滤次生 JVM 噪音、处理建议置顶展示，
  完整日志页顶部附修改建议
- 新增「模组不兼容」「Mixin 注入失败」诊断模式，明确提示移除/降级模组后即可游玩